--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,12 +1,15 @@
 .card-title{
     max-width: 170px!important;
     text-align: center;
+    margin-bottom: 0px;
 }
 .card{
     max-width: 180px!important;
 }
-.card img{
-    max-height: 180px;
+
+.card-body{
+  display: flex;
+  align-items: end;
 }
 
 .card:hover {
