--- a/templates/Men-Clothing.html
+++ b/templates/Men-Clothing.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- <script type="module" src="./constants.js"></script> -->
-    <!-- <script type="module" src="./nav.js"></script> -->
-    <link rel="stylesheet" href="./styles/cards.css">
-    <script type="module" src="./static/carousel.js"></script>
+    <link rel="stylesheet" href="../styles/cards.css">
 </head>
 <body>
-    <script src="./static/nav.js"></script>
+   <script src="../static/nav.js"></script>
 
-    <section id="carousel-section" class="mb-5 pb-5">
+    <!-- <section id="carousel-section" class="mb-5 pb-5">
 
-    </section>
+    </section> -->
+
+    <header id="categ-header" class="mb-5 pb-5">Men's Clothing</header>
 
     <div id="sortFilter" class="text-end me-5 pe-5 mb-5">
         
@@ -23,12 +22,10 @@
     
     <main id="all-cards">
 
-    </main>
-    <script type="module" src="./scripts/debugTest.js"></script>
-    <script type="module" src="./scripts/home.js"></script>
+    </main> 
 
+    <script type="module" src="../scripts/categories.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-
 </body>
 </html>
