--- a/templates/cart.html
+++ b/templates/cart.html
@@ -6,16 +6,62 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/cards.css">
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 <body>
     <script src="../static/nav.js"></script>
     
     <main id="cart-section">
-
     </main>
+
+    <section id="checkout-total" class="display-5 mt-5 mb-5 ms-4">
+        Checkout Amount: $
+        <span id = "checkout">
+
+        </span>
+    </section>
+
+    <section id="payment" class="mb-5 pb-5 d-flex justify-content-center" >
+        <button type="button" class="btn btn-dark" id="rzp-button1"> Pay Now</button>
+    </section>
 
     <script type="module" src="../scripts/cart.js"></script>
 
+    <script>
+        var amount = 10;
+        var options = {
+            "key": "rzp_test_p6RxCcR8W90wZr", // Enter the Key ID generated from the Dashboard
+            "amount": `${amount * 100}`, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+            "currency": "INR",
+            "name": "Acme Corp", //your business name
+            "description": "Test Transaction",
+            "image": "https://example.com/your_logo",
+            "order_id": "", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+            "callback_url": "../",
+            "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
+                "name": "Gaurav Kumar", //your customer's name
+                "email": "gaurav.kumar@example.com",
+                "contact": "9000090000" //Provide the customer's phone number for better conversion rates 
+            },
+            "notes": {
+                "address": "Razorpay Corporate Office"
+            },
+            "theme": {
+                "color": "#3399cc"
+            }
+        };
+        var rzp1 = new Razorpay(options);
+        document.getElementById('rzp-button1').onclick = function(e){
+            let ele = document.getElementById('checkout')
+            console.log(ele)
+            amount = parseInt(ele.textContent)
+            console.log(amount)
+            options.amount = (amount * 100).toString()
+            rzp1 = new Razorpay(options);
+            rzp1.open();
+            e.preventDefault();
+        }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
